corrected code for toggle (can collapse now) then corrected code for media screens 768+ so drop down was no longer showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ nav {
 /* Toggle*/
 
 #nav-drop:checked~nav {
-    display: block;
+    display: none;
 
 }
 
@@ -276,7 +276,7 @@ footer {
         width: 100%;
     }
 
-    .nav-drop-label {
+    .nav-drop, .nav-drop-label {
         display: none;
     }
 
